Added Interfaces for use with the UI, added ViewModels in the UI. Biggest change was to make our model entities public until we overcome the issue of DBSets being null when set to Internal

--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model APFTestingUI.Models.Exam.TheoryQuestion
+@{
     ViewBag.Title = "DisplayQuestion";
 }
 
@@ -6,16 +7,13 @@
     <h2>Jump Pilot Authorisation Exam</h2>
     
     <hgroup>
-        <h3>Question 1:</h3>
-        <h4>The governing body of parachuting Australia is:</h4>
+        <h3>Question @Model.QuestionNumber:</h3>
+        <h4>@Model.Description</h4>
     </hgroup>
 
     <form>
-        <input type="radio" name="answer" value="1" />Civial Aviation Safety Authority (CASA)<br />
-        <input type="radio" name="answer" value="2" />Australian Parachute Federation (APF)<br />
-        <input type="radio" name="answer" value="3" />AirServices Australia<br />
-        <input type="radio" name="answer" value="4" />Air Transport Safety Bureau (ATSB)<br />
-        <input type="submit" value="Next Question"
+        @Html
+        <input type="submit" value="Next Question" />
     </form>
 
 
