--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -1,32 +1,47 @@
-﻿@model APFTestingUI.Models.Exam.TheoryQuestion
+﻿@model APFTestingUI.Models.Exam.QuestionDisplayItem
 @{
-    ViewBag.Title = "DisplayQuestion";
+    ViewBag.Title = "Question " + Model.Index;
 }
 
 <div id="ExamContainer">
     <h2>Jump Pilot Authorisation Exam</h2>
     
     <hgroup>
-        <h3>Question @Model.QuestionNumber:</h3>
+        <h3>Question @Model.Index:</h3>
         <h4>@Model.Description</h4>
     </hgroup>
 
-    <form>
-        @foreach (var option in Model.PossibleAnswers)
-        {
-            <div class="OptionContainer">
-                @if (Model.NumCorrectAnswers == 1)
-                {
-                    <input type="radio" class="Option-Radiobutton" name="SelectedAnswer" value="@option.DisplayOrderIndex"/>
-                }
-                else
-                {
-                    <input type="checkbox" class="Option-Checkbox" name="SelectedAnswer" value="@option.DisplayOrderIndex"/>
-                }
-                <span class="Option-Description">@option.Description</span>
-            </div>
-        }
-        <input type="submit" value="Next Question" />
-    </form>
+@using (Html.BeginForm("SubmitAnswer", "Exam", FormMethod.Post, new { id = "QuestionForm" }))
+{
+    @Html.HiddenFor(m => m.ExamId)
+    @Html.HiddenFor(m => m.Index)
+    @Html.HiddenFor(m => m.NavDirection)
+    foreach (var answer in Model.Answers)
+    {
+        <div class="AnswerContainer">
+            @if (Model.NumberOfCorrectAnswers == 1)
+            {
+                <input type="radio" class="Answer-Radiobutton" name="ChosenAnswer" value="@answer.DisplayOrderIndex" checked="@answer.IsChecked" />
+            }
+            else
+            {
+                <input type="checkbox" class="Answer-Checkbox" name="ChosenAnswer" value="@answer.DisplayOrderIndex" checked="@answer.IsChecked" />
+            }
+            <span class="Answer-Description">@answer.Description</span>
+        </div>
+    }
+    <input id="PreviousButton" type="button" value="Previous Question" />
+    <input id="NextButton" type="submit" value="Next Question" />
+}
 
 </div>
+
+<script>
+    $(function () {
+        $('#PreviousButton').click(function () {
+            $('#NavDirection').val("true");
+            $('#QuestionForm').submit();
+        });
+    });
+
+</script>
