--- a/APFTestingUI/Views/Exam/Start.cshtml
+++ b/APFTestingUI/Views/Exam/Start.cshtml
@@ -14,6 +14,6 @@
         <li>Good luck!</li>
     </ul>
 
-    @Html.ActionLink("Start Exam", "Question", "Exam", new { examId = @ViewBag.ExamId, questionNumber = 0 })
+    @Html.ActionLink("Start Exam", "Question", new { examId = @ViewBag.ExamId, questionNumber = 0 })
 
 </div>
