--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -4,25 +4,36 @@
     ViewBag.Title = "Examiner Home";
 }
 
-<h2>Hello user.name!</h2>
-<h2>Welcome to the Examiner home page!</h2>
+<hgroup>
+<h2>Hello Grahame!</h2>
+<h3>Welcome to the Examiner home page!</h3>
+</hgroup>
 
-<a href="#">Add new Candidate</a>
+<p class="add-candidate"><a href="#">+ Add new Candidate</a></p>
+<hr />
 
-<div id="candidate-list">
-    
+<table id="candidate-list">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th colspan="2">Actions</th>
+        </tr>    
     @foreach (var candidate in Model.Candidates)
     {
-        <div class="candidate-list-item">
-            <div class="candidate-first-name">
+        <tr class="candidate-list-item">
+            <td class="candidate-first-name">
                 @candidate.FirstName
-            </div>
-            <div class="candidate-last-name">
+            </td>
+            <td class="candidate-last-name">
                 @candidate.LastName
-            </div>
-            @Html.ActionLink("Start Theory Exam", "Start", "Exam", new { examId = candidate.LatestExamId }, new { @class = "start-theory-link" })
-            @Html.ActionLink("Input Practical Results", "Start", "Exam", new { examId = candidate.LatestExamId }, new { @class = "input-practical-link" })
-        </div>
+            </td>
+            <td class="start-theory-link">
+                @Html.ActionLink("Start Theory Exam", "Start", "Exam", new { examId = candidate.LatestExamId }, new { @class = "link-button" })
+            </td>
+            <td class="input-practical-link">
+                @Html.ActionLink("Input Practical Results", "Start", "Exam", new { examId = candidate.LatestExamId }, new { @class = "link-button" })
+            </td>
+        </tr>
     }
 
-</div>
+</table>
