cleaned up the question communication between facade and UI. Installed JQuery 1.9.1

--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -1,6 +1,6 @@
 ﻿@model APFTestingUI.Models.Exam.QuestionDisplayItem
 @{
-    ViewBag.Title = "Question " + Model.Index;
+    ViewBag.Title = "Question " + Model.Index + 1;
 }
 
 <div id="ExamContainer">
