--- a/APFTestingUI/Views/Exam/Start.cshtml
+++ b/APFTestingUI/Views/Exam/Start.cshtml
@@ -14,6 +14,7 @@
         <li>Good luck!</li>
     </ul>
 
-    @Html.ActionLink("Start Exam", "Question", new { examId = @ViewBag.ExamId, questionNumber = 0 })
+    <p>@Html.ActionLink("Start Exam", "Question", new { examId = @ViewBag.ExamId, questionNumber = 0 })</p>
+    <p>@Html.ActionLink("REMOVE: Exam Summary", "FetchSummary", new { examId = @ViewBag.ExamId })</p>
 
 </div>
