--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -1,6 +1,6 @@
 ﻿@model APFTestingUI.Models.Exam.QuestionDisplayItem
 @{
-    ViewBag.Title = "Question " + Model.Index + 1;
+    ViewBag.Title = "Question " + (Model.Index + 1);
 }
 
 <div id="ExamContainer">
