Worked on displaying the Exam Summary. Also changed NavDirection from a bool to an Enum for the UI next and Prev buttons

--- a/APFTestingUI/Views/Exam/Result.cshtml
+++ b/APFTestingUI/Views/Exam/Result.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APFTestingUI.Models.Exam.TheoryComponentResult
 
 @{
-    ViewBag.Title = "FetchResult";
+    ViewBag.Title = "Exam Result";
 }
 
 <hgroup>
