--- a/APFTestingUI/Views/Exam/Summary.cshtml
+++ b/APFTestingUI/Views/Exam/Summary.cshtml
@@ -29,4 +29,4 @@
     }
 </table>
 
-<p><a class="button" href="#">Submit Exam</a></p>
+<p>@Html.ActionLink("Submit Exam", "Submit", new { examId = @Model.ExamId }, new { @class = "button" })</p>
