wired up the summary and results screens. Created a ResumeExam action in ExamController

--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.ActionLink("Start Theory Exam", "Start", "Exam", new { examId = candidate.LatestExamId }, new { @class = "link-button" })
             </td>
             <td class="input-practical-link">
-                @Html.ActionLink("Input Practical Results", "Start", "Exam", new { examId = candidate.LatestExamId }, new { @class = "link-button" })
+                <a href="#" class="link-button">Input Practical Results</a>
             </td>
         </tr>
     }
