--- a/APFTestingUI/Views/Exam/Result.cshtml
+++ b/APFTestingUI/Views/Exam/Result.cshtml
@@ -6,26 +6,19 @@
 
 <hgroup>
     <h2>Theory Component Result</h2>
-    @if (Model.IsCompetent)
-    {
-        <h3><span class="green">Congratulations!</span> You have passed.</h3>
-    }
-    else
-    {
-        <h3>Sorry, you did not pass.</h3>
-        
-    }
+    <h3>@Model.Message</h3>
 </hgroup>
-<p>You scored @{@Model.Score}.</p>
+
+<p>You scored @Model.Score</p>
 <p>Please notify your examiner.</p>
 
 @foreach (var question in Model.Questions)
 {
     
-    int questionNumber = question.QuestionIndex + 1;   
+    int questionNumber = question.Index + 1;   
     
-    <h3>@questionNumber @question.Description</h3>
-    foreach (var answer in question.SelectedAnswers)
+    <h3>@questionNumber: @question.Description</h3>
+    foreach (var answer in question.Answers)
     {
         
         if (answer.IsChecked && answer.IsCorrect)
@@ -47,5 +40,7 @@
         
         
     }
-    <br />
+    <hr />
 }
+
+<p>@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="button" })</p>
