Worked on the create exam in the UI side

--- a/APFTestingUI/Views/Exam/Summary.cshtml
+++ b/APFTestingUI/Views/Exam/Summary.cshtml
@@ -29,4 +29,4 @@
     }
 </table>
 
-<p><a class="button" href="#">Submit Exam</a></p>
+<p><a class="button" href=@Url.Action("SubmitTheoryComponent", new { examId = Model.ExamId })>Submit Exam</a></p>
